Fix - search design on mobile

--- a/src/sass/components/header/headerSecured.scss
+++ b/src/sass/components/header/headerSecured.scss
@@ -27,8 +27,13 @@ body.appConfigBody-is-mobile .navigationBlackFriday {list-style: none}
 
 .appConfigBody-is-mobile .dropDown-content--advancedSearch {
     width: 100vw;
-    right: -4.1em; // ( 2* .5em + setting icon size/padding + userdropdown + padding-right of container, etc. )
-    margin-top: .65em;
+    right: -4.4em; // ( 2* .5em + setting icon size/padding + userdropdown + padding-right of container, etc. )
+    margin-top: 2em;
+    max-height: calc(100vh - #{$header-height});
+
+    > div {
+        max-height: calc(100vh - #{$header-height});
+    }
 
     &::before {
       right: 7.5rem;
